tests/paczka1/fuzzy1/25804964.err
Error in line 8: 7qZGPbg1x A425 87,2
Error in line 5: dcJC8Awxi A990 57,8
Error in line 9: Nf3eOOQdh A990 48,5
Error in line 7: 7Q4v A237 63,7
